--- a/My first website.html
+++ b/My first website.html
@@ -1,4 +1,4 @@
 <h1>My first website</h1>
-<p>My favorite color is <span>Red</span>
+<p>My favorite color is <span style="color:red">Red</span>
 </p>
 <h1>HELLOOOOO</h1>
